--- a/app/assets/css/sass/_styles_typography.scss
+++ b/app/assets/css/sass/_styles_typography.scss
@@ -2,7 +2,8 @@
  * Typographic styles
  */
 
-.ms-wrap {
+.ms-wrap,
+.ms-form {
 	/*font: normal 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
 
 	h3 {
